--- a/HTML/undex.html
+++ b/HTML/undex.html
@@ -21,7 +21,7 @@
                 <p>compte</p>
             </div>
             <div class="panier">
-                <img src="./../IMAGE/PANIER.jpg" alt="">
+               <a href="./../panier.html "> <img src="./../IMAGE/PANIER.jpg" alt=""></a>
                 <p>panier</p>
             </div>
             <div class="laBrreVerte">
@@ -111,9 +111,30 @@
       <H2 style="color: wheat;">PRODUITS</H2>
       <h3 style="color: wheat;">NOTRE SOCIETE</h3>
       <h4 style="color: wheat;">VOTRE COMPTE</h4>
-    </div>
-    <div class="goo">
-      <img src="./../IMAGE/Google_Contacts_icon.svg.png" alt="">
+      <div class="goo">
+       <a href="./../contact.html"><img src="./../IMAGE/telephone.png" alt=""></a>
+      </div>
+      <div class="produit">
+        <a href="./../produit.html"><img src="./../IMAGE/produit-bio.png" alt=""></a>
+      </div>
+      <div class="societe">
+        <a href="./../societe.html"><img src="./../IMAGE/illustration-41.jpg" alt=""></a>
+      </div>
+      <div class="compte">
+        <a href="./../compte.html"><img src="./../IMAGE/utilisateur (1).png" alt=""></a>
+      </div>
+      <div class="facebok">
+        <a href="./../facebook.html"><img src="./../IMAGE/facebook (1).png" alt=""></a>
+        <p>facebook</p>
+      </div>
+      <div class="github">
+        <a href=""><img src="./../IMAGE/github (1).png" alt=""></a>
+        <p>github</p>
+      </div>
+      <div class="google">
+       <a href="./../google.html"> <img src="./../IMAGE/google.png" alt=""></a>
+        <p>google</p>
+      </div>
     </div>
    </div>
    
